Implement basic Enigma machine